<resources>
    <string name="app_name">Students Attendance</string>
    <string name="absen_siswa">Absen Siswa</string>
    <string name="selesai">Selesai</string>
    <string name="student">Student</string>
    <string name="event">Event</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="students">Students</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="events">Events</string>
    <string name="more">More…</string>
    <string name="no_histories">Ups, no histories recorded.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_teacher">Hi Teacher…</string>
    <string name="add_more">Add More</string>
    <string name="subtitle_top_card">You have %1$d events and %2$d students.</string>
    <string name="record_attendance_batch">Record Attendance Batch</string>
</resources>